--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -48,7 +48,7 @@
 							<%= render "cart_dropdown" %>
 						</span>						
 						<span class="white-text small-text">&nbsp;|&nbsp;</span>
-						<%= link_to "SIGN IN", user_signin_path, class: "black-text" %>
+						<%= link_to "SIGN IN", signin_users_path, class: "black-text" %>
 					</div>
 				</div>
 		
