--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,19 +1,19 @@
 <%= render "header" %>
 <div class="forgot-box">
 <div class="row container forgot">
-<h2>Reset your password</h2>
+<h3>Reset your password</h3>
 <p class="msg-forgot">A link to reset your password would be sent to your email</p>
   <div class = "col l12 m12 s12 forgot">
     <form class="forgot">
       <div class="row entry-forgot">
-        <div class="input-field">
-          <input id="icon_email" type="email" class="validate">
+        <div>
           <label for="icon_email">Email</label>
+          <input id="icon_email" type="email" class="validate">
         </div>
       </div>
       <div class="row submit-forgot">
       <button class="btn waves-effect waves-light blue-forgot" type="submit" name="action">submit
-      </button>  or<%= link_to " Cancel", user_signin_path %>
+      </button>  or <%= link_to "Cancel", signin_users_path %>
       </div>
     </form>
   </div>
