--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <div class="row container">
 <h2>Create Account</h2>
   <div class = "container col l8 m12 s12 signup">
-    <form class="pipe">
+    <form class="pipe-signup">
       <div class="row entry">
         <div class="input-field">
           <input id="first_icon" type="text" class="validate">
