--- a/app/views/users/signin.html.erb
+++ b/app/views/users/signin.html.erb
@@ -3,7 +3,7 @@
 <div class="signin row container">
   <div class="describe"><h2>Sign In</h2></div>
   <div class = "container col l8 signin">
-    <form class="signin pipe">
+    <form class="pipe-signin">
       <div class="row entry">
         <div class="input-field">
           <input id="icon_email" type="email" class="validate">
