Combine cart and checkout page
Why?
Since the task is done in both pages, it will be better to have one page
during the "order checkout" where the customers modify their order

How?
Put the content on checkout.html.erb into cart.html.erb
remove checkout.html.erb
remove checkout_controllers.rb
remove checkout route
remove checkout.scss file

https://www.pivotaltracker.com/story/show/110141794
[finished #110141794]

--- a/app/views/application/_cart_dropdown.html.erb
+++ b/app/views/application/_cart_dropdown.html.erb
@@ -37,8 +37,9 @@
   </div>
   <div class="cart-dropdown-footer">
     <div class="row">
-      <div class="col l6"><%= link_to "View Cart", "/cart", class: 'btn grey' %></div>
-      <div class="col l6"><%= link_to "Checkout", "/checkout", class: 'btn right gen-green-background' %></div>
+      <div class="col l12">
+        <%= link_to "Proceed to Cart", "/cart", class: 'btn right gen-green-background' %>
+      </div>
     </div>
   </div>
 </div>
