--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,5 +27,5 @@ $pinterest-red: #c92228;
 @import "landing";
 @import "users";
 @import "products";
-@import "checkout";
+@import "cart";
 @import "cart_dropdown";
