Oauth Authentication for Users [Finishes #110060596] Why?
A user could want to sign up using facebook, twitter or google.

How?

Implement policies for all three social media platform by:
a. Separating regular user from oauth user
b. Opening accounts on all three social media platforms
c. Signing user into sessions once the implementation is properly done

https://www.pivotaltracker.com/story/show/110060596

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -17,7 +17,10 @@
 					<%= link_to "My Wishlist", "#", class: 'white-text small-text' %>
 					<span class="white-text small-text">&nbsp;|&nbsp;</span>
 					<%= link_to "Currency - NGN", "#", class: 'white-text small-text' %>
-					
+					<% if logged_in %>
+					<span class="white-text small-text">&nbsp;|&nbsp;</span>
+					<span class="black-text small-text">Welcome, <%= current_user.first_name %></span>
+					<% end %>
 				</div>
 		
 			</div>
@@ -48,7 +51,7 @@
 							<%= render "cart_dropdown" %>
 						</span>						
 						<span class="white-text small-text">&nbsp;|&nbsp;</span>
-						<%= link_to "SIGN IN", signin_users_path, class: "black-text" %>
+						<%= link_to "SIGN IN", login_path, class: "black-text" %>
 					</div>
 				</div>
 		
