Display shop products on landing page
Why?
Given that I am a customer
When I visit the landing page of a shop
I should see some featured products

How?
We fetched the product data from the databse
using the relationship between product and category
(A catergory has many products through subcategory)

https://www.pivotaltracker.com/story/show/108000516
[finishes #108000516]

--- a/app/views/landing/_product.html.erb
+++ b/app/views/landing/_product.html.erb
@@ -1,10 +1,10 @@
 <div class= "col s12 m6 l3">
-	<a href="<%= product_path(Product.order("RANDOM()").first) %>">
+	<%= link_to product_path(product) do %>
 		<div class="card home-card">
-			<div class="card-image"><%= image_tag product[:image] %></div>
+			<div class="card-image"><%= image_tag product.product_image_links.first.link_name %></div>
 	  </div>
 	  <div class="card-desc center">
-      <span><%= product[:text] %></span><br /><span class="price"><%= product[:price] %></span>
+      <span><%= product.name %></span><br /><span class="price">&#x20A6;<%= product.price %></span>
     </div>
-	</a>
+	<% end %>
 </div>
