Account Password Recovery
Why?
Allows users to set a new password if they forgot their previous password

How?
Added methods to the UserController to accept an email, send a reset link and anset a new password.

https://www.pivotaltracker.com/story/show/110134536
[finishes #110134536]

--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -196,6 +196,13 @@ form {
   font-size: 0.8em;
 }
 
+.field-success {
+  @extend .pull-right;
+
+  color: $my-green;
+  font-size: 0.8em;
+}
+
 .new-user-form,
 .signin-user-form {
   margin: 2em 6em;
@@ -203,4 +210,9 @@ form {
 
 .submit-div {
   margin-top: 3em;
+}
+
+.pword-message {
+  color: $my-green;
+  font-size: 0.9em;
 }
