--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,23 +1,26 @@
-<%= render "header" %>
 <div class="forgot-box">
-<div class="row container forgot">
-<h3>Reset your password</h3>
-<p class="msg-forgot">A link to reset your password would be sent to your email</p>
-  <div class = "col l12 m12 s12 forgot">
-    <form class="forgot">
-      <div class="row entry-forgot">
-        <div>
-          <label for="icon_email">Email</label>
-          <input id="icon_email" type="email" class="validate">
+  <div class="row container forgot">
+    <h3>Reset your password</h3>
+    <% unless flash['error'].blank?  %>
+        <span class="field-error left" id="email-error"> <%= flash['error'] %> </span>
+    <% end %>
+    <% unless flash['success'].blank?  %>
+        <span class="field-success left" id="email-error"> <%= flash['success'] %> </span>
+    <% end %>
+    <div class = "col l12 m12 s12 forgot">
+      <%= form_tag %>
+        <div class="row entry-forgot">
+          <div>
+            <%= label_tag :email, "Email" %>
+            <%= email_field_tag :email, "", required: "required" %>
+          </div>
         </div>
-      </div>
-      <div class="row submit-forgot">
-      <button class="btn waves-effect waves-light blue-forgot" type="submit" name="action">submit
-      </button>  or <%= link_to "Cancel", signin_users_path %>
-      </div>
-    </form>
+        <div class="row submit-forgot">
+          <%= submit_tag "submit", class: "btn waves-effect waves-light blue-forgot" %>
+          or <%= link_to "Cancel", login_path %>
+        </div>
+    </div>
   </div>
-</div>
 </div>
 <%= render "footer" %>
 
