--- a/app/views/application/_cart_dropdown.html.erb
+++ b/app/views/application/_cart_dropdown.html.erb
@@ -3,36 +3,20 @@
     <div class="row">
       <div class="col l7">Product</div>
       <div class="col l1">Qty</div>
-      <div class="col l3">Total</div>
-      <div class="col l1"></div>
+      <div class="col l3">Price</div>
+      <div class="col l1">&#8358;</div>
     </div>
   </div>
   <div class="cart-dropdown-body">
-    <div class="row">
-      <div class="col l2"><%= image_tag "watch1.jpg" %></div>
-      <div class="col l5">BU1358&amp;BU1359 burberry stainless steel and gold couple watches</div>
-      <div class="col l1">2</div>
-      <div class="col l3">N97,000.00</div>
-      <div class="col l1"><a href="#"><i class="fa fa-times red-text"></i></a></div>
-    </div>
-    <div class="row">
-      <div class="col l2"><%= image_tag "shirt2.jpg" %></div>
-      <div class="col l5">Firetrap - Men's Plain Short Sleeve Poplin Shirt</div>
-      <div class="col l1">2</div>
-      <div class="col l3">N97,000.00</div>
-      <div class="col l1"><a href="#"><i class="fa fa-times red-text"></i></a></div>
-    </div>
-    <div class="row">
-      <div class="col l2"><%= image_tag "watch1.jpg" %></div>
-      <div class="col l5">BU1358&amp;BU1359 burberry stainless steel and gold couple watches</div>
-      <div class="col l1">2</div>
-      <div class="col l3">N97,000.00</div>
-      <div class="col l1"><a href="#"><i class="fa fa-times red-text"></i></a></div>
+    <div class="row bold">
+      <div class="row" id="updated_product">
+      
+      </div>
     </div>
 
     <div class="row bold">
-      <div class="col l8"><span class="right">Subtotal</span></div>
-      <div class="col l4"><span class="right">N415,700.00</span></div>
+      <div class="col l8"><span class="right">Total</span></div>
+      <div class="col l4"><span class="right" id="total_price"></span></div>
     </div>
   </div>
   <div class="cart-dropdown-footer">
