User Authentication via Form Why? Allows users log in to the page in order to support additional features that require user login.
How?
Added methods to the Session Controller to process form login, and also modified view pages to display Log out link when user is Logged in, and Sign in link when user is logged out.

https://www.pivotaltracker.com/story/show/110060714

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -51,7 +51,7 @@
 							<%= render "cart_dropdown" %>
 						</span>						
 						<span class="white-text small-text">&nbsp;|&nbsp;</span>
-						<%= link_to "SIGN IN", login_path, class: "black-text" %>
+						<%= auth_link %>
 					</div>
 				</div>
 		
