Add to Wishlist Functionality
Why?
Users should be able to add or save items to their wishlist for easy retrieval whenever they're ready to purchase the item.

How?
Created the Wishlist model, which references the user, and the product. Each new entry is stored with a reference to the user it belongs to, and the product it saves.
Set up Wishlist controller which handles managing wishlists.

https://www.pivotaltracker.com/story/show/110082496

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -55,10 +55,6 @@ nav {
   box-shadow: none !important;
 }
 
-.home-card,
-.card-image > img {
-}
-
 .cat-heading::after {
   left: auto;
   right: 0;
@@ -89,6 +85,14 @@ nav {
 
 .width-max {
   max-width: 100%;
+}
+
+.dark-cyan {
+  background: $dark-cyan;
+}
+
+.dark-cyan-text {
+  color: $dark-cyan !important;
 }
 
 .top-bar {
