--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -14,7 +14,7 @@
 					<span class="white-text small-text">&nbsp;|&nbsp;</span>
 					<%= link_to "FAQ", "#", class: 'white-text small-text' %>
 					<span class="white-text small-text">&nbsp;|&nbsp;</span>
-					<%= link_to "My Wishlist", "#", class: 'white-text small-text' %>
+					<%= link_to "My Wishlist", wishlist_index_path, class: 'white-text small-text' %>
 					<span class="white-text small-text">&nbsp;|&nbsp;</span>
 					<%= link_to "Currency - NGN", "#", class: 'white-text small-text' %>
 					<% if logged_in %>
