--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -70,15 +70,12 @@
         <div class="buy-now">
           <div class="row">
             <div class="col s1 bold">Qty: </div>
-            <div class="col s2"><%= number_field_tag :quantity, 1, in: 1..@product.quantity, step: 1 %>
+            <div class="col s2">
+              <%= number_field_tag :quantity, 1, in: 1..@product.quantity, step: 1 %>
             </div>
             <div class="col s4"><%= submit_tag "ADD TO CART", class: "waves-effect btn products-input", id: "submit"%></div>
-            <div class="col s5">
-              <a href="#" title="" class="wish-list-link">
-                <i class="fa fa-heart-o wishlist-icon"></i> Add to Wish List
-              </a>
+            <%= wishlist_add_link %>
             </div>
-          </div>
         </div>
 
         <%= render "product_features" %>
