Fix Show Password Checkbox Display Angle
Why?
When I click on the show password checkbox, the checkmark should be displayed at the appropriate angle irrespective of my browser type.

How?
Targetting the element and adding rotate property to all browser options

https://www.pivotaltracker.com/story/show/112509151
[finishes #112509151]

--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -212,6 +212,15 @@ form {
   margin-top: 3em;
 }
 
+.forgot-password {
+  #show-password:checked + [for="show-password"]::before {
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+}
+
 .pword-message {
   color: $my-green;
   font-size: 0.9em;
