--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -10,9 +10,9 @@
             <span class="field-error" id="password-error"></span>
             <%= password_field_tag :password, "", class: "pword", id: "reset_password"%>
           </div>
-          <div class="">
-            <input type="checkbox" id="show_password" />
-            <label for="show_password" title="show password">show password</label>
+          <div class="forgot-password">
+            <input type="checkbox" id="show-password" />
+            <label for="show-password" title="show password">show password</label>
           </div>
         </div>
         <div class="row submit-forgot">
