--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -42,9 +42,9 @@
               <%= f.password_field :password, required: "required", class: "pword" %>
             </div>
 
-            <div class="">
-              <input type="checkbox" id="show_password" />
-              <label for="show_password" title="show password">show password</label>
+            <div class="forgot-password">
+              <input type="checkbox" id="show-password" />
+              <label for="show-password" title="show password">show password</label>
             </div>
 
             <div class="submit-div center">
