Implement Checkout Functionality [finished #110141636]
Why?
When a user is done adding items to the cart
He/She should be able to checkout and complete the order process

How?
Design pages for the checkout proceses
Generate models, controllers, views, migrations and helpers for this functionality

Completing https://www.pivotaltracker.com/story/show/110141636

Generate the order, order_item and address models.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "users";
 @import "products";
 @import "cart";
+@import "orders";
 @import "wishlist";
 @import "cart_dropdown";
 @import "categories";
