--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,13 +21,13 @@
             <div class="">
               <%= f.label :first_name, "First Name" %>
               <span class="field-error" id="first-name-error"></span>
-              <%= f.text_field :first_name, required: "requried", minlenght: 2, class: "" %>
+              <%= f.text_field :first_name, required: "required", minlenght: 2, class: "" %>
             </div>
 
             <div class="">
               <%= f.label :first_name, "Last Name" %>
               <span class="field-error" id="last-name-error"></span>
-              <%= f.text_field :last_name, required: "requried", minlenght: 2, class: "" %>
+              <%= f.text_field :last_name, required: "required", minlenght: 2, class: "" %>
             </div>
 
             <div class="">
