--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -2,65 +2,36 @@
 <div class= "row-break"></div>
 <div class="row container-trim">
   <div class="col s12 m12 l8">
-    <div>
-      <div class="">
-        <div class="row">
-        <div class="col l6">
-          <label class="bold black-text">Name: </label>
-          <input type="text"/>
-        </div>
-        <div class="col l6">
-          <label class="bold black-text">Email: </label>
-          <input type="email" />
-        </div>
-        </div>
-        <div class="row">
-        <div class="col l6">
-        <label class="bold black-text">Address: </label>
-          <input type="text"/>
-        </div>
-        <div class="col l6">
-          <label class="bold black-text">Nearby Landmark: </label>
-          <input type="text" />
-        </div>
-     </div>
-     <div class="row">
-        <div class="col l6">
-          <label class="bold black-text">Gender: </label>
-          <select class="browser-default">
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-          </select>
-        </div>
-        <div class="col l6">
-          <label class="bold black-text">Phone Number: </label>
-          <input type="text"/>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col l4">
-          <label class="bold black-text">State: </label>
-          <input type="text"/>
-        </div>
-        <div class="col l4">
-          <label class="bold black-text">City/Local Govt: </label>
-          <input type="text"/>
-        </div>
-        <div class="col l4">
-          <label class="bold black-text">Country: </label>
-          <input type="text"/>
-        </div>
-    </div>
-    </div>
-      
     <div class="check-products-list">
-      <%= render partial: "cartproduct", collection: @cartproducts%>
-      
-      <div class="row">
-        <a href="#" class="btn gen-green-background right">EMPTY CART</a>
-      </div>
+      <%= form_for @order, url: address_orders_path do |f| %>
+        <%= f.fields_for :order_items do |i| %>
+          <div class="border-wrap product-box">
+            <div class="row">
+              <%= image_tag @cartproducts[1][:image], class: 'col l2'%>
+              <div class="col l3">
+                <span><%= @cartproducts[1][:text] %></span>
+                <span><%= @cartproducts[1][:category] %></span>
+              </div>
+              <span class="col l2"><%= @cartproducts[1][:price] %></span>
+              <div class="col l2 center">
+                <span>Quantity: </span>
+                <%= i.hidden_field :product_id, value: 17 %>
+                <%= i.text_field :quantity, class: "center", value: 2 %>
+                <a href="#">UPDATE</a>
+              </div>
+              <span class="col l2"><%= @cartproducts[1][:price] %></span>
+              <a href="#" class="grey-text"><i class="small material-icons col l1">delete</i></a>
+            </div>
+          </div><br />
+        <% end %>
+
+        <div class="">
+          <a href="#" class="btn grey left">EMPTY CART</a>
+          <%= f.submit "Proceed To Checkout", class: "btn gen-green-background right" %>
+          <div class="clearfix"></div>
+        </div>
+      <% end %>
     </div>
-  </div>
   </div>
 
   <div class="col s12 m12 l4">
@@ -114,7 +85,10 @@
         <div class="row sub-sections"> <span class="left">shipping cost </span><span class="right">₦100.00</span></div>
         <div class="row sub-sections"> <span class="left">total amount </span><span class="right">₦21,100.00</span></div>
         <div class="row  section-button center">
+          <%= link_to root_path do %>
           <div><button type="submit" class="btn gen-green-background"> Complete order</button></div>
+            <% end %>
+
         </div>
       </div>
     </div>
