--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -19,3 +19,6 @@ $twitter-blue: #4099ff;
 $instagram-red: #3f729b;
 $pinterest-red: #c92228;
 $pure-red: #ff0000;
+$disabled-shade: #dddddd;
+$faint-grey: #999999;
+$dark-blue: #000033;
