Design Sorting/Filtering widgets for Sort Functionality
Why?
Given that I am a user, I should be able to select options to sort product listings on pages that show multiple products.

How?
Designing a div to hold different sort and filter options

https://www.pivotaltracker.com/story/show/113281059

[finishes #113281059]

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -58,3 +58,12 @@
 *:first-child + html .digg-pagination {
   overflow: hidden;
 }
+
+.sort {
+  select {
+    font-family: $section-font;
+    font-size: 0.875em;
+    height: 2.4em;
+  }
+
+}
